Revision history for DBIx-SchemaChecksum

0.24   2008-10-03 13:19:05
    - fixed a bug in postgres unique key calculation that broke 
      auto-updates


0.23   2008-09-26 17:01:44
    !!! BIG FAT WARNING !!!
    Older checksums won't work, at least for postgres
    !!! BIG FAT WARNING !!!
    - added postgres unique keys to checksum
    - include postgres enums in checksum
    - fixed another problem with SAME_CHECKSUM, skip files without 
      checksums


0.22   2008-09-23 13:37:16
    - ignore files without a checksum
    - fixed more bugs with same-checksum updates


0.21  2008-09-19 16:34:04
    - find sql snippets in all dirs below the given dir
    - handle update scripts that result in the same checksum


0.20   2008-09-11 20:49:26
    !!! BIG FAT WARNING !!!
    Checksums calculated with version prior to 0.20 won't work with 
    checksums calculated after 0.20
    --- BIG FAT WARNING ---

    - changed schemadump to list columns sorted by name so that funky 
      postgres inheritance followed by changes to the table other 
      tables inherit from don't f*ck up the checksum.


0.10   2008-09-11 15:45:01
    - add command line option to ignore ORDINAL_POSITION of columns 
      

0.09   2008-09-11 11:56:08
    - ignore typed nextvals, which cause problems in postgres and 
      different connection methods (socket/tcp)


0.08 Thu Aug 21 09:48:23 CEST 2008
	- Make checksum, type schema unaware. This funnily posed problems when
	  connecting via socket or TCP to pg

0.07   2008-06-19 09:41:26
    - for strange reasons, MooseX::Getop does not work with DBI::db constraint
      when used from other scripts
      So I dumped the DBI::db constraint for now


0.06   2008-06-16 10:46:19
    - Test Coverage: 78.8%
    - removed IO::Prompt
    - Alternative construction via dbh (either dsn or dbh) (maros)
    - fixed some problems with tests on various platforms


0.05   2008-05-24 10:17:02
    - Test Coverage: 82.4%