@@ -1,6 +1,7 @@
 Revision history for DBIx-SchemaChecksum
 
 0.24   2008-10-03 13:19:05
+    - nicer output (say instead of croak)
     - fixed a bug in postgres unique key calculation that broke 
       auto-updates
 
